# distributed-deployment-ml

./: .gitattributes  .gitignore  Dockerfile.mock  Makefile  NOTES.md  PROPOSAL.md  README.md  _future_impl.py  args.py  bento_service.py  bento_service_onnx.py  bento_service_tf.py  bento_service_torch.py  config.yml  data.py  data_tf.py  data_torch.py  dispatcher.py  docker-compose.yaml  future_impl.py  gpu_runner.py  manager.py  model.py  model_runnable.ipynb  model_tf.py  model_torch.py  packer_onnx.py  packer_tf.py  packer_torch.py  parallel_tensorflow.py  parallel_torch.py  prepare_model.py  pyproject.toml  requirements.txt  server.py  train.py  train_tf.py  train_torch.py  worker.py
bento_svc/onnx_svc/: Dockerfile  README.md  bentoml.yml  requirements.txt  setup.py
bento_svc/tf_svc/: Dockerfile  MANIFEST.in  README.md  bentoml.yml  requirements.txt  (+1 more)
distribute-worker/: _worker.py  dispatcher.py  manager.py
distribute_workers/: _worker.py  dispatcher.py  manager.py
k8s/: gpu_pods.yml  tf_svc_.yml  tf_svc_deployment.yml
model/: model.json  tfweights.h5  torchnet.pt  weights.h5
onnx/: bento_packer.py  bento_service.py  helpers.py
pytorch/: Dockerfile  bento_packer.py  bento_service.py  cache_wrapped.py  data.py  model.py  runnable_state.py  train.py
tf/: Dockerfile  bento_packer.py  bento_service.py  data.py  model.py  requirements.txt  train.py
torch/: Dockerfile  bento_packer.py  bento_service.py  config.py  data.py  model.py  train.py
utils/: Untitled Diagram.drawio  minkube_cluster.drawio
workers/: _worker.py  args.py  dispatcher.py  manager.py
(+100 files in other folders)
