[tool.poetry]
name = "distrbuted-deployment-ml"
version = "0.1.0"
description = "prototype gpu distribution"
authors = ["Aaron Pham <aaronpham0103@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
torch = {path = "venv/torch.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
